# NeuronAnnotation

./: .gitignore
include/: AnnotationDS.hpp  DataBase.hpp  GraphDrawManager.hpp  SWCP.hpp  UserInfo.hpp
src/Data/: AnnotationDS.cpp  AnnotationDS.hpp  SWCP.hpp
src/Render/: AnnotationDS.cpp  BlockVolumeRenderer.cpp  BlockVolumeRenderer.hpp  CMakeLists.txt  GraphDrawManager.cpp  LinesRenderer.cpp  LinesRenderer.hpp
src/Render/Shaders/: block_raycast_f.glsl  markedpath_f.glsl
src/Server/: AnnotationDS.cpp  CMakeLists.txt  DataBase.cpp  DownloadRequestHandler.cpp  GraphDrawManager.cpp  MyHTTPRequestHandler.cpp  MyHTTPRequestHandler.hpp  RequestHandlerFactory.cpp  RequestHandlerFactory.hpp  UploadRequestHandler.cpp  UploadRequestHandler.hpp  WebSocketRequestHandler.cpp  WebSocketRequestHandler.hpp
test/: AnnotationDS.cpp  CMakeLists.txt  DataBase.cpp  DataBase.hpp  ErrorMessage.hpp  SWCP.hpp  test_errormessage.cpp  test_mongodb.cpp  test_pick.cpp  test_swcparser.cpp
web/: package-lock.json  package.json
web/src/: Info.tsx  InteractiveImage.tsx  LoadAndSave.tsx  RenderSelecter.tsx  SrcTable.tsx  ToolsHeader.tsx  TreeVisualization.tsx  format.tsx  style.css
